--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <a style="color:white;font-family:georgia;font-size:125%" href="orgOps.htm"> Organization & Development Opportunities</a>
 </div>
 </div>
+<div style="text-align:center">
+  <a style="color:#2C313F;font-family:georgia;font-size:125%;" href="topSecret.htm"> || </a>
+</div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
