--- a/OPS-HTML.htm
+++ b/OPS-HTML.htm
@@ -1204,8 +1204,8 @@ style='tab-interval:.5in'>
   text-align:center;line-height:normal'><span style='font-size:16.0pt;
   font-family:"Georgia",serif;color:#E7E6E6;mso-no-proof:yes'><img width=612
   height=444 id="_x0000_i1034"
-  src="https://vtcc-ros.github.io/read_pics/hamb.jpg"
-  alt="https://vtcc-ros.github.io/read_pics/hamb.jpg"></span><span
+  src="https://vtcc-ros.github.io/read_pics/cookies.jpg"
+  alt="https://vtcc-ros.github.io/read_pics/cookies.jpg"></span><span
   style='font-size:12.0pt;font-family:"Georgia",serif'><o:p></o:p></span></p>
   </td>
  </tr>
@@ -2942,8 +2942,8 @@ style='tab-interval:.5in'>
   text-align:center;line-height:normal'><span style='font-size:16.0pt;
   font-family:"Georgia",serif;color:#E7E6E6;mso-no-proof:yes'><img border=0
   width=87 height=75 id="_x0000_i1030"
-  src="https://cdn.shopify.com/s/files/1/1719/9265/products/71FIfbbjxNL._SL1012_1024x1024.jpg?v=1487491105"
-  alt="https://cdn.shopify.com/s/files/1/1719/9265/products/71FIfbbjxNL._SL1012_1024x1024.jpg?v=1487491105"></span></p>
+  src="https://www.lsu.edu/hss/afrotc/images/item73351.png"
+  alt="https://www.lsu.edu/hss/afrotc/images/item73351.png"></span></p>
   </td>
   <td width=606 colspan=16 style='width:454.5pt;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
@@ -3357,8 +3357,8 @@ style='tab-interval:.5in'>
   text-align:center;line-height:normal'><span style='font-size:16.0pt;
   font-family:"Georgia",serif;color:#E7E6E6;mso-no-proof:yes'><img border=0
   width=87 height=75 id="_x0000_i1029"
-  src="https://vtcc-ros.github.io/read_pics/Growley.jpg"
-  alt="https://vtcc-ros.github.io/read_pics/Growley.jpg"></span><o:p></o:p></p>
+  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Love-heart-arrow.svg/800px-Love-heart-arrow.svg.png"
+  alt="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Love-heart-arrow.svg/800px-Love-heart-arrow.svg.png"></span><o:p></o:p></p>
   </td>
   <td width=606 colspan=16 style='width:454.5pt;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
@@ -3767,8 +3767,8 @@ style='tab-interval:.5in'>
   text-align:center;line-height:normal'><span style='font-size:16.0pt;
   font-family:"Georgia",serif;color:#E7E6E6;mso-no-proof:yes'><img border=0
   width=87 height=75 id="_x0000_i1028"
-  src="https://upload.wikimedia.org/wikipedia/commons/c/c2/USA_-_Army_Medical_Corps.png"
-  alt="https://upload.wikimedia.org/wikipedia/commons/c/c2/USA_-_Army_Medical_Corps.png"></span></p>
+  src="https://www.rhf.vt.edu/assets/img/rhf_logo.jpg"
+  alt="https://www.rhf.vt.edu/assets/img/rhf_logo.jpg"></span></p>
   </td>
   <td width=606 colspan=16 style='width:454.5pt;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
@@ -4182,8 +4182,8 @@ style='tab-interval:.5in'>
   text-align:center;line-height:normal'><span style='font-size:16.0pt;
   font-family:"Georgia",serif;color:#E7E6E6;mso-no-proof:yes'><img border=0
   width=87 height=75 id="_x0000_i1027"
-  src="https://vtcc-ros.github.io/read_pics/Growley.jpg"
-  alt="https://vtcc-ros.github.io/read_pics/Growley.jpg"></span></p>
+  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgtkRYxIlvUf24HQlF3aCLu18vn1qEOkPDeS_3XIP0pBmTOEMV3A"
+  alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgtkRYxIlvUf24HQlF3aCLu18vn1qEOkPDeS_3XIP0pBmTOEMV3A"></span></p>
   </td>
   <td width=606 colspan=16 style='width:454.5pt;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
