--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 </div>
 <div style="text-align:center">
-  <a style="color:#2C313F;font-family:georgia;font-size:125%;" href="topSecret.htm"> || </a>
+  <a style="color:#2C313F;font-family:georgia;font-size:125%;" href="topSecret.htm"> " " </a>
 </div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
