--- a/POD-HTML.htm
+++ b/POD-HTML.htm
@@ -870,7 +870,7 @@ table.MsoTableGrid
   2019</span></span><span style='font-family:"Georgia",serif'><o:p></o:p></span></p>
   <p class=MsoHeader align=center style='text-align:center'><span
   style='font-size:10.0pt;font-family:"Georgia",serif;color:white;mso-themecolor:
-  background1'><a href="https://vtcc-ros.github.io/topSecret.htm"><span
+  background1'><a style='text-decoration:none;' href="https://vtcc-ros.github.io/topSecret.htm"><span
   style='color:white;mso-themecolor:background1;text-decoration:none;
   text-underline:none'>“</span></a></span><span style='font-size:10.0pt;
   font-family:"Georgia",serif'>&nbsp;</span><span style='font-family:"Georgia",serif'><o:p></o:p></span></p>
