--- a/OPS-HTML.htm
+++ b/OPS-HTML.htm
@@ -10,6 +10,9 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=Generator content="Microsoft Word 15">
 <meta name=Originator content="Microsoft Word 15">
 <base target="_top">
+<style>
+  a {text-decoration:none !important}
+</style>
 <link rel=File-List href="OPS-HTML_files/filelist.xml">
 <link rel=Edit-Time-Data href="OPS-HTML_files/editdata.mso">
 <!--[if !mso]>
