changed text from "home" to "ros's" in nav bar

--- a/dayPlan.htm
+++ b/dayPlan.htm
@@ -37,7 +37,7 @@
 <div class="menuBar">
   <a href="orgOps.htm">Organizations and Opportunities</a>
   <a href="https://goo.gl/forms/w0TwJWoIoa80CuzJ2">Request an Announcement</a>
-  <a href="index.html">Home</a>
+  <a href="index.html">RO's</a>
 </div>
   <div class="docHold">
     <iframe
