--- a/dayPlan.htm
+++ b/dayPlan.htm
@@ -36,7 +36,7 @@
 
 <div class="menuBar">
   <a href="orgOps.htm">Organizations and Opportunities</a>
-  <a href="https://goo.gl/forms/w0TwJWoIoa80CuzJ2">Request an Announcement</a>
+  <a href="https://vtcc-ros.github.io/#anSurv">Request an Announcement</a>
   <a href="index.html">RO's</a>
 </div>
   <div class="docHold">
