responsive survey layout

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
   </em>
 </p>
 </div>
-<div class="container center">
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScNOrI5XxUzUYSWfLwZm2jKODV5W3mHC5JTLcsdMjRwcW_D1A/viewform?embedded=true" width="960" height="791" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-</div>
+<div class="survey">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScNOrI5XxUzUYSWfLwZm2jKODV5W3mHC5JTLcsdMjRwcW_D1A/viewform?embedded=true" width="960" height="800" marginheight="0" marginwidth="0">Loading...</iframe>
+  </div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
