--- a/READ-HTML.htm
+++ b/READ-HTML.htm
@@ -4624,8 +4624,8 @@ ul
   text-align:center;line-height:normal'><span style='font-size:16.0pt;
   font-family:"Georgia",serif;color:#E7E6E6;mso-no-proof:yes'><img border=0
   width=87 height=75 id="_x0000_i1030"
-  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEkrPy-BLFhstklAbT3Yxyn54ANybiFE7CDOi0Q_MDrfDn8tWV"
-  alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEkrPy-BLFhstklAbT3Yxyn54ANybiFE7CDOi0Q_MDrfDn8tWV"></span><o:p></o:p></p>
+  src="https://is1-ssl.mzstatic.com/image/thumb/Purple128/v4/88/44/0c/88440ced-b999-c4aa-c3cd-0a192ebd7b57/source/512x512bb.jpg"
+  alt="https://is1-ssl.mzstatic.com/image/thumb/Purple128/v4/88/44/0c/88440ced-b999-c4aa-c3cd-0a192ebd7b57/source/512x512bb.jpg"></span><o:p></o:p></p>
   </td>
   <td width=637 colspan=16 style='width:477.6pt;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
