--- a/READ-HTML.htm
+++ b/READ-HTML.htm
@@ -1528,8 +1528,8 @@ ul
   text-align:center;line-height:normal'><span style='font-size:16.0pt;
   font-family:"Georgia",serif;color:#E7E6E6;mso-no-proof:yes'><img border=0
   width=87 height=75 id="_x0000_i1037"
-  src="http://main.acsevents.org/acs_bb_2018/branch/master/theme/rfl/img/rfl-logo.svg"
-  alt="http://main.acsevents.org/acs_bb_2018/branch/master/theme/rfl/img/rfl-logo.svg"></span></p>
+  src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/31118153_2341844605829554_8949550335383306240_n.jpg?_nc_cat=110&_nc_ht=scontent-iad3-1.xx&oh=ccb54a6b9428b3cf9f122f47dafccb48&oe=5D43F1AA"
+  alt="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/31118153_2341844605829554_8949550335383306240_n.jpg?_nc_cat=110&_nc_ht=scontent-iad3-1.xx&oh=ccb54a6b9428b3cf9f122f47dafccb48&oe=5D43F1AA"></span></p>
   </td>
   <td width=637 colspan=16 style='width:477.6pt;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
