--- a/OPS-HTML.htm
+++ b/OPS-HTML.htm
@@ -24,7 +24,6 @@ w\:* {behavior:url(#default#VML);}
 <link rel=colorSchemeMapping href="OPS-HTML_files/colorschememapping.xml">
 <!--[if gte mso 9]><xml>
  <w:WordDocument>
-  <w:Zoom>130</w:Zoom>
   <w:SpellingState>Clean</w:SpellingState>
   <w:GrammarState>Clean</w:GrammarState>
   <w:TrackMoves>false</w:TrackMoves>
@@ -642,7 +641,7 @@ w\:* {behavior:url(#default#VML);}
 	mso-font-charset:0;
 	mso-generic-font-family:roman;
 	mso-font-pitch:variable;
-	mso-font-signature:3 0 0 0 1 0;}
+	mso-font-signature:-536869121 1107305727 33554432 0 415 0;}
 @font-face
 	{font-family:Calibri;
 	panose-1:2 15 5 2 2 2 4 3 2 4;
@@ -1210,8 +1209,8 @@ style='tab-interval:.5in'>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
   color:white;mso-themecolor:background1'>No experience needed! Cyber FastTrack
-  is a free and unique three-stage program that will help you discover if you
-  have what it takes to make a difference in cybersecurity.<o:p></o:p></span></p>
+  is a free and unique three-stage program that will help you discover if you have
+  what it takes to make a difference in cybersecurity.<o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
   color:white;mso-themecolor:background1'><o:p>&nbsp;</o:p></span></p>
@@ -1638,10 +1637,10 @@ style='tab-interval:.5in'>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
   color:white;mso-themecolor:background1'>Do you want to learn how to fight?
-  Either for self-defense or for commissioning into a combat role? If so, this is
-  an interest survey for a potential new Corps organization focused on just
-  that. Training will likely include boxing, Brazilian Jiu-Jitsu, Krav Maga,
-  MMA, some weapons training, and more! If interested, email C/SSG Guthrie at </span><u><span
+  Either for self-defense or for commissioning into a combat role? If so, this
+  is an interest survey for a potential new Corps organization focused on just that.
+  Training will likely include boxing, Brazilian Jiu-Jitsu, Krav Maga, MMA,
+  some weapons training, and more! If interested, email C/SSG Guthrie at </span><u><span
   style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
   color:#C0504D'><a href="mailto:chrisgu3@vt.edu"><span style='color:#C0504D'>chrisgu3@vt.edu</span></a></span></u><span
   style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
@@ -2496,16 +2495,16 @@ style='tab-interval:.5in'>
   115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
   color:white;mso-themecolor:background1'>RISING JUNIORS AND SENIORS/FIFTH
   YEARS: From 12 July to 5 August, work directly with CSM Willey and make money
-  this summer while honing your leadership skills. You have the opportunity to serve
-  as cadre for international students at a Massanutten Military Academy summer
-  training camp. You will be leading students in military style leadership and
-  outdoor adventure training. The pay is $250-$350 per week plus an additional
-  stipend if you have Chinese language skills. All meals and lodging are
-  included. There is an interest meeting Saturday, 30 MAR at 0930 in the PCR.
-  Email CSM Willey at </span><u><span style='font-size:12.0pt;line-height:115%;
-  font-family:"Georgia",serif;color:#C0504D'><a href="mailto:dwilley@vt.edu"><span
-  style='color:#C0504D'>dwilley@vt.edu</span></a> </span></u><span
-  style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
+  this summer while honing your leadership skills. You have the opportunity to
+  serve as cadre for international students at a Massanutten Military Academy
+  summer training camp. You will be leading students in military style
+  leadership and outdoor adventure training. The pay is $250-$350 per week plus
+  an additional stipend if you have Chinese language skills. All meals and
+  lodging are included. There is an interest meeting Saturday, 30 MAR at 0930
+  in the PCR. Email CSM Willey at </span><u><span style='font-size:12.0pt;
+  line-height:115%;font-family:"Georgia",serif;color:#C0504D'><a
+  href="mailto:dwilley@vt.edu"><span style='color:#C0504D'>dwilley@vt.edu</span></a>
+  </span></u><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
   color:white;mso-themecolor:background1'>if you will be attending. <o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>&nbsp;</span></p>
@@ -2920,11 +2919,12 @@ style='tab-interval:.5in'>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
   color:white;mso-themecolor:background1'>Interview to be on the Corps’ New
-  Student Orientation Staff for July! We are looking to hire eight (8) enthusiastic,
-  energetic cadets to work New Student Orientation this summer, $11/hour, up to
-  39 hours per week, July 7th through August 2nd. You can also take up to two
-  Summer II classes at the same time. The Corps will provide the residence hall
-  to live in, but you must purchase your meal plan (Housing requires it).<o:p></o:p></span></p>
+  Student Orientation Staff for July! We are looking to hire eight (8)
+  enthusiastic, energetic cadets to work New Student Orientation this summer,
+  $11/hour, up to 39 hours per week, July 7th through August 2nd. You can also
+  take up to two Summer II classes at the same time. The Corps will provide the
+  residence hall to live in, but you must purchase your meal plan (Housing
+  requires it).<o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
   color:white;mso-themecolor:background1'><o:p>&nbsp;</o:p></span></p>
@@ -3346,25 +3346,21 @@ style='tab-interval:.5in'>
   normal'><span style='font-size:12.0pt;font-family:"Georgia",serif'>&nbsp;</span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
-  color:white;mso-themecolor:background1'>The Regiment has received a very generous
-  donation of tickets to programs at the Moss Arts Center this semester. 4
-  tickets are open to cadets for each performance and the sign-up sheets have
-  been posted on the board next to the NCH laundry room. All are encouraged to
-  sign up; however, since there are a limited number of spots, each cadet is
-  limited to 1 performance. The tickets are for cadets only and may not be
-  reserved for outside guests. Below are the dates and times of each
+  color:white;mso-themecolor:background1'>The Regiment has received a very
+  generous donation of tickets to programs at the Moss Arts Center this
+  semester. 4 tickets are open to cadets for each performance and the sign-up
+  sheets have been posted on the board next to the NCH laundry room. All are
+  encouraged to sign up; however, since there are a limited number of spots,
+  each cadet is limited to 1 performance. The tickets are for cadets only and
+  may not be reserved for outside guests. Below are the dates and times of each
   performance: <o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
   color:white;mso-themecolor:background1'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
-  color:white;mso-themecolor:background1'>Apr <span class=GramE>12</span> 1930
-  Turtle Island Quartet<o:p></o:p></span></p>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
-  color:white;mso-themecolor:background1'>Apr <span class=GramE>26</span> 1930
-  Fred Hersch, Kurt Elling, Kate McGarry Leave of Grass<o:p></o:p></span></p>
+  color:white;mso-themecolor:background1'>Apr 26 1930 Fred Hersch, Kurt Elling,
+  Kate McGarry Leave of Grass<o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   115%'><span style='font-size:12.0pt;line-height:115%;font-family:"Georgia",serif;
   color:white;mso-themecolor:background1'>May <span class=GramE>11</span> 1930
